# ms2od

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml  cmake.yml
.kdev4/: ms2od.kdev4
doc/: CMakeLists.txt  Doxyfile
src/: .directory  CMakeLists.txt  blinkableCB.cpp  blinkableCB.h  chronometerlabel.cpp  chronometerlabel.h  convert.cpp  convert.h  dockwidgetclosedetect.cpp  dockwidgetclosedetect.h  filefinder.cpp  filefinder.h  framechart.cpp  framechart.h  framechart.ui  lineeditcolored.cpp  lineeditcolored.h  logger.cpp  logger.cpp.autosave  logger.h  logger.tpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  remainingtimelabel.cpp  remainingtimelabel.h  test.h  utils.cpp  utils.h  utils.tpp
src/.bck/: ms2od_fr_FR.ts
src/icons/: icons.qrc
src/lang/: CMakeLists.txt  lang.qrc  ms2od_fr_FR.qm  ms2od_fr_FR.qph  ms2od_fr_FR.ts
